--- a/dev-workflow-ui/webContent/includes/template/exception-details.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/exception-details.xhtml
@@ -6,7 +6,7 @@
   xmlns:pe="http://primefaces.org/ui/extensions">
 
 <ui:fragment rendered="#{!errorPage.showDetails}">
-  <h:outputText value="An unexpected error has occured:" />
+  <h:outputText value="#{ivy.cm.co('/exception/unexpectedError')}:" />
 </ui:fragment>
 
 <h1 class="bg-warning">
@@ -14,8 +14,7 @@
 </h1>
 
 <ui:fragment rendered="#{errorPage.isIvyException()}">
-  <h4 class="list-group-item-heading" style="margin-top: 20px">Error
-    id</h4>
+  <h4 class="list-group-item-heading" style="margin-top: 20px">#{ivy.cm.co('/exception/errorId')}</h4>
   <p>#{errorPage.exceptionId}</p>
 </ui:fragment>
 
@@ -28,14 +27,14 @@
     </span>
   </h3>
   <ui:fragment rendered="#{!errorPage.error.attributeNames.isEmpty()}">
-    <h4 class="list-group-item-heading">Attributes</h4>
+    <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/attributes')}</h4>
     <div class="table-responsive">
       <table class="table table-bordered table-striped"
         style="font-size: 1.0em">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Value</th>
+            <th>#{ivy.cm.co('/common/name')}</th>
+            <th>#{ivy.cm.co('/common/value')}</th>
           </tr>
         </thead>
         <tbody>
@@ -52,17 +51,17 @@
       </table>
     </div>
   </ui:fragment>
-  <h4 class="list-group-item-heading">Thrown by</h4>
+  <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/thrownBy')}</h4>
   <p style="margin-bottom: 0;">
-    Process:
+    #{ivy.cm.co('/common/process')}:
     <h:outputText value="#{errorPage.path}" />
-    <br /> Element:
+    <br /> #{ivy.cm.co('/common/element')}:
     <h:outputText value="#{errorPage.error.processElement}" />
   </p>
   <br />
 
   <ui:fragment rendered="#{!errorPage.error.processCallStack.isEmpty()}">
-    <h4 class="list-group-item-heading">Process call stack</h4>
+    <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/processCallStack')}</h4>
     <!-- Don't move me: I'm a PRE!!! -->
     <pre>
       <code>
@@ -73,7 +72,7 @@
     <br />
   </ui:fragment>
   <ui:fragment rendered="#{!errorPage.causedBy.isEmpty()}">
-    <h4 class="list-group-item-heading">Technical cause</h4>
+    <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/technicalCause')}</h4>
     <ui:repeat value="#{errorPage.causedBy}" var="causedBy">
       <pre>
         <code>#{causedBy.class.simpleName}: #{causedBy.message.trim()}</code>
@@ -82,26 +81,26 @@
     <br />
   </ui:fragment>
 
-  <h4 class="list-group-item-heading">Request Uri</h4>
+  <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/requestUri')}</h4>
   <p>#{errorPage.getRequestUri()}</p>
   <br />
-  <h4 class="list-group-item-heading">Servlet</h4>
+  <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/servlet')}</h4>
   <p>#{errorPage.getServletName()}</p>
   <br />
 
-  <h4 class="list-group-item-heading">Application</h4>
+  <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/application')}</h4>
   <p>#{errorPage.applicationName}</p>
   <br />
 
   <ui:fragment rendered="#{!errorPage.threadLocalValues.isEmpty()}">
-    <h4 class="list-group-item-heading">Thread local values</h4>
+    <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/threadLocalValues')}</h4>
     <div class="table-responsive">
       <table class="table table-bordered table-striped"
         style="font-size: 0.9em">
         <thead>
           <tr>
-            <th>Key</th>
-            <th>Value</th>
+            <th>#{ivy.cm.co('/common/key')}</th>
+            <th>#{ivy.cm.co('/common/value')}</th>
           </tr>
         </thead>
         <tbody>
@@ -119,7 +118,7 @@
   </ui:fragment>
   <br />
 
-  <h4 class="list-group-item-heading">Stack-Trace</h4>
+  <h4 class="list-group-item-heading">#{ivy.cm.co('/exception/stacktrace')}</h4>
   <pre>
     <code>#{errorPage.getStackTrace()}</code>
   </pre>
