--- a/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -5,7 +5,7 @@
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
   <p:dataTable id="tasks" var="task" value="#{casesDetailsBean.tasks}" rowKey="#{task.uuid}"
-    widgetVar="tasksTable" emptyMessage="No Tasks found with given criteria" lazy="true" rows="6"
+    widgetVar="tasksTable" emptyMessage="#{ivy.cm.co('/common/noTasksFound')}" lazy="true" rows="6"
     paginatorPosition="bottom" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
     <p:ajax event="rowSelect" listener="#{tasksBean.displayTaskRow}" update="@form" />
 
@@ -13,7 +13,7 @@
       <jc:stateBadge id="taskState" data="#{task}"/>
     </p:column>
 
-    <p:column headerText="Prio" id="priority" filterBy="#{task.priority}"
+    <p:column headerText="#{ivy.cm.co('/common/prio')}" id="priority" filterBy="#{task.priority}"
       width="20px" responsivePriority="3" styleClass="center-table-cell">
       <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
       <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
@@ -23,17 +23,17 @@
       <h:outputText id="taskName" value="#{task.name}"/>
     </p:column>
 
-    <p:column headerText="Responsible" responsivePriority="4">
+    <p:column headerText="#{ivy.cm.co('/common/responsible')}" responsivePriority="4">
       <ui:repeat id="taskResponsibles" value="#{task.responsibles}" var="responsible">
         <jc:user id="taskResponsible" user="#{responsible}" />
       </ui:repeat>
     </p:column>
 
-    <p:column headerText="Start" width="100">
+    <p:column headerText="#{ivy.cm.co('/common/start')}" width="100">
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" responsivePriority="3" width="100">
+    <p:column headerText="#{ivy.cm.co('/common/end')}" responsivePriority="3" width="100">
       <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
@@ -42,9 +42,9 @@
         styleClass="ui-button-flat text-color action-button" />
       <p:menu id="taskActionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom"
         style="width: 200px">
-        <p:menuitem value="Start task" actionListener="#{homepageBean.executeTask(task)}" id="startTaskBtn"
+        <p:menuitem value="#{ivy.cm.co('/common/startTask')}" actionListener="#{homepageBean.executeTask(task)}" id="startTaskBtn"
           icon="si si-controls-play" />
-        <p:menuitem id="openTaskDetailsBtn" value="Open task details" url="#{task.detailUrl}"
+        <p:menuitem id="openTaskDetailsBtn" value="#{ivy.cm.co('/common/openDetails')}" url="#{task.detailUrl}"
           icon="si si-information-circle" />
       </p:menu>
     </p:column>
