--- a/dev-workflow-ui/webContent/view/switch-user.xhtml
+++ b/dev-workflow-ui/webContent/view/switch-user.xhtml
@@ -23,7 +23,7 @@
             <p:ajax event="rowSelect" listener="#{loginBean.loginFromTable}" />
             <f:facet name="header">
               <div class="flex justify-content-between pretty-search">
-                <h4 class="m-0">Login</h4>
+                <h4 class="m-0">#{ivy.cm.co('/login/signIn')}</h4>
                 <div class="ui-input-icon-left filter-container">
                   <i class="pi pi-search" />
                   <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{switchUserBean.globalFilter}"
