--- a/dev-workflow-ui/webContent/includes/components/statistics/tasksAll.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/tasksAll.xhtml
@@ -5,7 +5,7 @@
 <h:body>
   <ui:composition template="/includes/template/statisticsCard.xhtml">
     <ui:define name="title">#{ivy.cm.co('/statistics/allTasks')}</ui:define>
-    <ui:define name="content"><h:outputText value="#{statisticsBean.allTasks}" /></ui:define>
+    <ui:define name="content"><h:outputText id="allTasks" value="#{statisticsBean.allTasks}" /></ui:define>
   </ui:composition>
 </h:body>
 </html>
