--- a/dev-workflow-ui/webContent/includes/components/statistics/taskStateGraph.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/taskStateGraph.xhtml
@@ -6,7 +6,7 @@
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
       <h4>#{ivy.cm.co('/statistics/tasksByState')}</h4>
-      <p:donutChart model="#{statisticsBean.taskByStateGraph}" rendered="#{statisticsBean.taskByStateGraph != null}"
+      <p:donutChart id="taskStateGraph" model="#{statisticsBean.taskByStateGraph}" rendered="#{statisticsBean.taskByStateGraph != null}"
         style="align-self: center; height: 18rem; width: 18rem;" />
       <h:panelGroup layout="block" rendered="#{statisticsBean.taskByStateGraph == null}"
         styleClass="h-full flex flex-column align-items-center justify-content-center">
