Cleanup unused css classes in html

--- a/dev-workflow-ui/webContent/view/cases.xhtml
+++ b/dev-workflow-ui/webContent/view/cases.xhtml
@@ -25,7 +25,7 @@
                 </h:panelGroup>
                 <p:tooltip for="showAllCasesSwitch_container" position="top"
                   value="If enabled shows all cases, even the ones the user is not involved in" />
-                <div class="ui-input-icon-left filter-container ml-3">
+                <div class="ui-input-icon-left ml-3">
                   <i class="pi pi-search" />
                   <p:inputText id="globalFilter" value="#{casesBean.casesDataModel.filter}"
                     onkeyup="PF('casesTable').filter()" placeholder="#{ivy.cm.co('/common/search')}" />
