--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -76,7 +76,7 @@
                     </h:panelGroup>
                   </h:panelGroup>
                   <h:panelGroup id="globalFilterGroup" layout="block" styleClass="ml-2">
-                    <div class="ui-input-icon-left filter-container">
+                    <div class="ui-input-icon-left">
                       <i class="pi pi-search" />
                       <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/starts/search')}"
                         value="#{processesBean.startsDataModel.globalFilter}">
