--- a/dev-workflow-ui/webContent/view/switch-user.xhtml
+++ b/dev-workflow-ui/webContent/view/switch-user.xhtml
@@ -24,7 +24,7 @@
             <f:facet name="header">
               <div class="flex justify-content-between pretty-search">
                 <h4 class="m-0">#{ivy.cm.co('/login/signIn')}</h4>
-                <div class="ui-input-icon-left filter-container">
+                <div class="ui-input-icon-left">
                   <i class="pi pi-search" />
                   <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{switchUserBean.globalFilter}"
                     onkeyup="PF('usersTable').filter()" />
