--- a/dev-workflow-ui/webContent/view/webservices.xhtml
+++ b/dev-workflow-ui/webContent/view/webservices.xhtml
@@ -20,7 +20,7 @@
             <f:facet name="header">
               <div class="flex justify-content-between mb-3 pretty-search">
                 <h4 class="m-0">#{ivy.cm.co('/webservices/webServiceProcesses')}</h4>
-                <div class="ui-input-icon-left filter-container">
+                <div class="ui-input-icon-left">
                   <i class="pi pi-search" />
                   <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{webServicesBean.filter}"
                     onkeyup="PF('webServicesTable').filter()"/>
